@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 Cask Data, Inc.
+ * Copyright © 2015-2016 Cask Data, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -16,28 +16,32 @@
 
 package co.cask.cdap.etl.batch.spark;
 
-import co.cask.cdap.api.Resources;
-import co.cask.cdap.api.dataset.lib.FileSetProperties;
-import co.cask.cdap.api.dataset.lib.TimePartitionedFileSet;
-import co.cask.cdap.api.plugin.PluginContext;
 import co.cask.cdap.api.spark.AbstractSpark;
-import co.cask.cdap.api.spark.SparkContext;
+import co.cask.cdap.api.spark.SparkClientContext;
+import co.cask.cdap.etl.api.batch.BatchAggregator;
 import co.cask.cdap.etl.api.batch.BatchConfigurable;
-import co.cask.cdap.etl.api.batch.BatchContext;
 import co.cask.cdap.etl.api.batch.BatchSinkContext;
 import co.cask.cdap.etl.api.batch.BatchSourceContext;
-import co.cask.cdap.etl.batch.config.ETLBatchConfig;
+import co.cask.cdap.etl.api.batch.SparkSink;
+import co.cask.cdap.etl.batch.AbstractAggregatorContext;
+import co.cask.cdap.etl.batch.BatchPhaseSpec;
+import co.cask.cdap.etl.batch.CompositeFinisher;
+import co.cask.cdap.etl.batch.Finisher;
+import co.cask.cdap.etl.batch.PipelinePluginInstantiator;
 import co.cask.cdap.etl.common.Constants;
 import co.cask.cdap.etl.common.DatasetContextLookupProvider;
-import co.cask.cdap.etl.common.Pipeline;
-import co.cask.cdap.etl.common.PipelineRegisterer;
-import co.cask.cdap.etl.common.SinkInfo;
+import co.cask.cdap.etl.common.SetMultimapCodec;
+import co.cask.cdap.etl.planner.StageInfo;
+import com.google.common.base.Joiner;
+import com.google.common.collect.SetMultimap;
 import com.google.gson.Gson;
-import org.apache.avro.mapreduce.AvroKeyInputFormat;
-import org.apache.avro.mapreduce.AvroKeyOutputFormat;
+import com.google.gson.GsonBuilder;
+import org.apache.spark.SparkConf;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.DataOutput;
+import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.OutputStream;
@@ -45,72 +49,65 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 /**
  * Configures and sets up runs of {@link ETLSparkProgram}.
  */
 public class ETLSpark extends AbstractSpark {
   private static final Logger LOG = LoggerFactory.getLogger(ETLSpark.class);
-  private static final Gson GSON = new Gson();
+  private static final Gson GSON = new GsonBuilder()
+    .registerTypeAdapter(SetMultimap.class, new SetMultimapCodec<>()).create();
 
-  private final ETLBatchConfig config;
-
-  private List<Finisher> finishers;
+  private final BatchPhaseSpec phaseSpec;
+  private Finisher finisher;
   private List<File> cleanupFiles;
 
-  public ETLSpark(ETLBatchConfig config) {
-    this.config = config;
+  public ETLSpark(BatchPhaseSpec phaseSpec) {
+    this.phaseSpec = phaseSpec;
   }
 
   @Override
   protected void configure() {
-    setDescription("Spark Driver for ETL Batch Applications");
+    setName(phaseSpec.getPhaseName());
+    setDescription("Spark phase executor. " + phaseSpec.getDescription());
+
     setMainClass(ETLSparkProgram.class);
 
-    PipelineRegisterer pipelineRegisterer = new PipelineRegisterer(getConfigurer(), "batch");
+    setExecutorResources(phaseSpec.getResources());
+    setDriverResources(phaseSpec.getResources());
 
-    Pipeline pipelineIds =
-      pipelineRegisterer.registerPlugins(
-        config, TimePartitionedFileSet.class,
-        FileSetProperties.builder()
-          .setInputFormat(AvroKeyInputFormat.class)
-          .setOutputFormat(AvroKeyOutputFormat.class)
-          .setEnableExploreOnCreate(true)
-          .setSerDe("org.apache.hadoop.hive.serde2.avro.AvroSerDe")
-          .setExploreInputFormat("org.apache.hadoop.hive.ql.io.avro.AvroContainerInputFormat")
-          .setExploreOutputFormat("org.apache.hadoop.hive.ql.io.avro.AvroContainerOutputFormat")
-          .setTableProperty("avro.schema.literal", Constants.ERROR_SCHEMA.toString())
-          .build(), true);
-
-    Resources resources = config.getResources();
-    if (resources != null) {
-      setExecutorResources(resources);
+    if (phaseSpec.getPhase().getSources().size() != 1) {
+      throw new IllegalArgumentException("Pipeline must contain exactly one source.");
     }
-    Resources driverResources = config.getDriverResources();
-    if (driverResources != null) {
-      setDriverResources(driverResources);
+    if (phaseSpec.getPhase().getSinks().isEmpty()) {
+      throw new IllegalArgumentException("Pipeline must contain at least one sink.");
     }
 
     // add source, sink, transform ids to the properties. These are needed at runtime to instantiate the plugins
     Map<String, String> properties = new HashMap<>();
-    properties.put(Constants.PIPELINEID, GSON.toJson(pipelineIds));
+    properties.put(Constants.PIPELINEID, GSON.toJson(phaseSpec));
     setProperties(properties);
   }
 
   @Override
-  public void beforeSubmit(SparkContext context) throws Exception {
+  public void beforeSubmit(SparkClientContext context) throws Exception {
     cleanupFiles = new ArrayList<>();
-    finishers = new ArrayList<>();
+    CompositeFinisher.Builder finishers = CompositeFinisher.builder();
 
+    context.setSparkConf(new SparkConf().set("spark.driver.extraJavaOptions", "-XX:MaxPermSize=256m"));
     Map<String, String> properties = context.getSpecification().getProperties();
-    Pipeline pipeline = GSON.fromJson(properties.get(Constants.PIPELINEID), Pipeline.class);
-    String sourcePluginId = pipeline.getSource();
+    BatchPhaseSpec phaseSpec = GSON.fromJson(properties.get(Constants.PIPELINEID), BatchPhaseSpec.class);
+    PipelinePluginInstantiator pluginInstantiator =
+      new PipelinePluginInstantiator(context, phaseSpec);
+    // we checked at configure time that there is exactly one source
+    String sourceName = phaseSpec.getPhase().getSources().iterator().next();
 
-    PluginContext pluginContext = context.getPluginContext();
-    BatchConfigurable<BatchSourceContext> batchSource = pluginContext.newPluginInstance(sourcePluginId);
+    BatchConfigurable<BatchSourceContext> batchSource = pluginInstantiator.newPluginInstance(sourceName);
+    DatasetContextLookupProvider lookProvider = new DatasetContextLookupProvider(context);
     SparkBatchSourceContext sourceContext = new SparkBatchSourceContext(context,
-                                                                        new DatasetContextLookupProvider(context),
-                                                                        sourcePluginId);
+                                                                        lookProvider,
+                                                                        sourceName);
     batchSource.prepareRun(sourceContext);
 
     SparkBatchSourceFactory sourceFactory = sourceContext.getSourceFactory();
@@ -119,15 +116,37 @@ public class ETLSpark extends AbstractSpark {
       throw new IllegalArgumentException("No input was set. Please make sure the source plugin calls setInput when " +
                                            "preparing the run.");
     }
-    addFinisher(batchSource, sourceContext, finishers);
+    finishers.add(batchSource, sourceContext);
 
     SparkBatchSinkFactory sinkFactory = new SparkBatchSinkFactory();
-    List<SinkInfo> sinkInfos = pipeline.getSinks();
-    for (SinkInfo sinkInfo : sinkInfos) {
-      BatchConfigurable<BatchSinkContext> batchSink = pluginContext.newPluginInstance(sinkInfo.getSinkId());
-      BatchSinkContext sinkContext = new SparkBatchSinkContext(sinkFactory, context, null, sinkInfo.getSinkId());
-      batchSink.prepareRun(sinkContext);
-      addFinisher(batchSink, sinkContext, finishers);
+    for (String sinkName : phaseSpec.getPhase().getSinks()) {
+      BatchConfigurable<BatchSinkContext> batchSink = pluginInstantiator.newPluginInstance(sinkName);
+      if (batchSink instanceof SparkSink) {
+        BasicSparkPluginContext sparkPluginContext = new BasicSparkPluginContext(context, lookProvider, sinkName);
+        ((SparkSink) batchSink).prepareRun(sparkPluginContext);
+        finishers.add((SparkSink) batchSink, sparkPluginContext);
+      } else {
+        BatchSinkContext sinkContext = new SparkBatchSinkContext(sinkFactory, context, null, sinkName);
+        batchSink.prepareRun(sinkContext);
+        finishers.add(batchSink, sinkContext);
+      }
+    }
+
+    Set<StageInfo> aggregators = phaseSpec.getPhase().getStagesOfType(BatchAggregator.PLUGIN_TYPE);
+    Integer numPartitions = null;
+    if (!aggregators.isEmpty()) {
+      if (aggregators.size() > 1) {
+        throw new IllegalArgumentException(String.format(
+          "There was an error during planning. Phase %s has multiple aggregators %s.",
+          phaseSpec.getPhaseName(), Joiner.on(',').join(aggregators)));
+      }
+      String aggregatorName = aggregators.iterator().next().getName();
+      BatchAggregator aggregator = pluginInstantiator.newPluginInstance(aggregatorName);
+      AbstractAggregatorContext aggregatorContext =
+        new SparkAggregatorContext(context, new DatasetContextLookupProvider(context), aggregatorName);
+      aggregator.prepareRun(aggregatorContext);
+      finishers.add(aggregator, aggregatorContext);
+      numPartitions = aggregatorContext.getNumPartitions();
     }
 
     File configFile = File.createTempFile("ETLSpark", ".config");
@@ -135,16 +154,17 @@ public class ETLSpark extends AbstractSpark {
     try (OutputStream os = new FileOutputStream(configFile)) {
       sourceFactory.serialize(os);
       sinkFactory.serialize(os);
+      DataOutput dataOutput = new DataOutputStream(os);
+      dataOutput.writeInt(numPartitions == null ? -1 : numPartitions);
     }
 
+    finisher = finishers.build();
     context.localize("ETLSpark.config", configFile.toURI());
   }
 
   @Override
-  public void onFinish(boolean succeeded, SparkContext context) throws Exception {
-    for (Finisher finisher : finishers) {
-      finisher.onFinish(succeeded);
-    }
+  public void onFinish(boolean succeeded, SparkClientContext context) throws Exception {
+    finisher.onFinish(succeeded);
     for (File file : cleanupFiles) {
       if (!file.delete()) {
         LOG.warn("Failed to clean up resource {} ", file);
@@ -152,17 +172,4 @@ public class ETLSpark extends AbstractSpark {
     }
   }
 
-  private <T extends BatchContext> void addFinisher(final BatchConfigurable<T> configurable,
-                                                    final T context, List<Finisher> finishers) {
-    finishers.add(new Finisher() {
-      @Override
-      public void onFinish(boolean succeeded) {
-        configurable.onRunFinish(succeeded, context);
-      }
-    });
-  }
-
-  private interface Finisher {
-    void onFinish(boolean succeeded);
-  }
 }
